# UsbPanicButton

./: Makefile.am  README.md  configure.ac
src/: HidDevice.cpp  HidDevice.h  USBPanicButton.cpp  USBPanicButton.h
